<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/tvRecetas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:bufferType="normal"
        android:text="@string/tvRecetas"
        android:textAlignment="textStart"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btDesayunos"
        android:layout_width="209dp"
        android:layout_height="75dp"
        android:text="@string/btDesayunos"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/ivDesayuno"
        app:layout_constraintTop_toBottomOf="@+id/tvRecetas"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/btAlmuerzos"
        android:layout_width="209dp"
        android:layout_height="75dp"
        android:text="@string/btAlmuerzos"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/ivAlmuerzo"
        app:layout_constraintTop_toBottomOf="@+id/btDesayunos"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/btMeriendas"
        android:layout_width="209dp"
        android:layout_height="75dp"
        android:text="@string/btMeriendas"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/ivMerienda"
        app:layout_constraintTop_toBottomOf="@+id/btAlmuerzos"
        app:layout_constraintVertical_bias="0.363" />

    <ImageView
        android:id="@+id/ivAlmuerzo"
        android:layout_width="121dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDesayuno"
        app:layout_constraintVertical_bias="0.099" />

    <ImageView
        android:id="@+id/ivMerienda"
        android:layout_width="121dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAlmuerzo"
        app:layout_constraintVertical_bias="0.264" />

    <ImageView
        android:id="@+id/ivDesayuno"
        android:layout_width="121dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecetas"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="158dp"
        android:layout_height="72dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/md_theme_errorContainer_mediumContrast"
        android:text="@string/btVolver"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>