<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoCuestionario">

    <TextView
        android:id="@+id/tvPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPuntuacionGeneral"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvPreguntasAcertadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPreguntasAcertadas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPuntuacion"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvPreguntasFalladas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPreguntasFalladas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPreguntasAcertadas"
        app:layout_constraintVertical_bias="0.132" />

    <ImageButton
        android:id="@+id/ibInicio"
        android:layout_width="125dp"
        android:layout_height="113dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPreguntasFalladas"
        app:layout_constraintVertical_bias="0.822"
        app:srcCompat="@drawable/casa"
        app:tint="@color/fAmarillo" />

</androidx.constraintlayout.widget.ConstraintLayout>